--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,13 +7,66 @@ nav {
   padding: 0;
   background: grey;
   text-decoration: none;
-  position: right;
   height: 50px;
   display: flex;
+  justify-content: space-around;
   align-items: center;
+  font-family: sans-serif;
 }
 .link {
-  color: white;
+  color: black;
   text-decoration: none;
-  margin: 0 6px;
+  font-size: 18px;
+  padding: 0 8px;
+}
+.link:hover {
+  color: white;
+  transition: 0.2s;
+}
+
+.header {
+  background: grey;
+  height: 400px;
+}
+
+.logo {
+  height: 25px;
+  width: auto;
+}
+.head-hote{
+  padding-top: 150px;
+  position: center;
+}
+.name {
+  text-align: center;
+  font-family: sans-serif;
+  font size: 50px;
+  margin: 0;
+  padding-bottom: 20px;
+}
+.head-futur {
+  font-family: sans-serif;
+  text-align: center;
+  font-size:20px;
+}
+.head-futur-bar {
+  width: 500px;
+
+}
+
+.head-profil {
+  color: ;
+  font-family: system-ui;
+  text-align: center;
+}
+
+.skills {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 400px;
+}
+.experience{
+  text-align: center;
+  font-size: 20px;
+  margin-top: 600px;
 }
