--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,93 +1,78 @@
-body {
+body{
   margin: 0;
   padding: 0;
 }
-nav {
-  position: sticky;
-  top: 0;
-  margin: 0;
-  padding: 0;
-  background: grey;
-  text-decoration: none;
-  height: 50px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-family: sans-serif;
-}
-.link {
-  color: black;
-  text-decoration: none;
-  font-size: 18px;
-  padding: 0 8px;
-}
-.link:hover {
-  color: white;
-  transition: 0.2s;
-}
-
-.header {
-  background: none;
-  height: 425px;
-}
-
-.logo-home{
-  height: 25px;
-  width: auto;
-}
-.email-logo {
-  height: 20px;
-}
-
-.portrait {
-  overflow:hidden;
-  -webkit-border-radius:200px;
-  -moz-border-radius:200px;
-  border-radius:200px;
-  width:200px;
-  height:200px;
+/*HEADER*/
+header #portrait {
+  height: 20%;
+  width: 20%;
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding: 10px;
+  margin-bottom: 1%;
+  border-radius: 50%
 }
-
-.head-name {
+header .container-fluid{
+  padding: 30px 0 0 0;
+  background-color: grey;
+  font-family: 'Josefin Sans', sans-serif;
+}
+.header-name {
+  font-size: 35px;
+}
+.header-name, h2, p{
   text-align: center;
-  font-family: sans-serif;
-  font size: 50px;
-  margin: 0;
 }
-.head-futur {
-  font-family: sans-serif;
-  text-align: center;
-  font-size:20px;
-}
-.head-futur-bar {
+.header-bar {
   width: 500px;
+  color: black;
+}
+.bar-title{
+  text-align: center;
+  font-size: 25px;
+}
+.collapse{
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+.progress{
+  margin-right: 0;
 }
 
-.head-profil {
-  color: ;
-  font-family: system-ui;
-  text-align: center;
+/* ARTICLE */
+article{
+  padding: 0;
   margin: 0;
-  padding: 16px 0;
+  font-family: 'Varela Round', sans-serif;
+}
+#skills{
+  margin: 3%
+}
+#experiences{
+  margin: 5%
+}
+#projects{
+  margin: 5%
+}
+#hobbies{
+  margin: 5%
+}
+#contact{
+  margin: 5%
 }
 
 .bar-title {
-
-    font-size: 18px;
-    padding-bottom: 250px;
-
+    /* centre verticalement les enfants entre eux */
     align-items: center;
 
     /* active flexbox */
     display: flex;
 
     /* garde le texte centré s’il passe sur plusieurs lignes ou si flexbox n’est pas supporté */
-    text-align: center
+    text-align: center;
 }
+
 .bar-title::before,
 .bar-title::after {
     /* la couleur est volontairement absente ; ainsi elle sera celle du texte */
@@ -101,30 +86,4 @@ nav {
 
     /* espace les traits du texte */
     margin: 0 .5em;
-}
-
-.article {
-  background: #607d8b;
-  height: 700px;
-}
-
-.article .bar-title {
-  color: black;
-  font-family: sans-serif;
-  padding: inherit;
-  margin: auto;
-  padding-bottom: auto;
-}
-
-.footer .bar-title {
-  color: black;
-  font-family: sans-serif;
-  padding: inherit;
-  margin: auto;
-  padding-bottom: auto;
-}
-
-.footer {
-  background: #009688;
-  height: 600px;
 }
